Corrected the bug that when the content is a hidden div, when dialog is closed it leave the div visible.

--- a/css/style.css
+++ b/css/style.css
@@ -48,3 +48,7 @@ pre {
     width: 800px;
     margin: 40px auto;
 }
+/* Multiple box */
+div.multi-content { 
+    display: none;
+}
